k3s/environment/minio/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pvc
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          imagePullPolicy: IfNotPresent
          args:
            - server
            - /storage
            - '--address'
            - ':9202' # api地址
            - '--console-address'
            - ':9201' # 控制台地址
          ports:
            - containerPort: 9202
            - containerPort: 9201
          volumeMounts:
            - name: storage # 必须和上面定义的volume名字保持一致
              mountPath: "/storage"
      nodeSelector:
        kubernetes.io/hostname: k3s-master
