k3s/environment/minio/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  type: NodePort
  ports:
    - port: 9202
      name: minio-api
      targetPort: 9202
      protocol: TCP
      nodePort: 30202
    - port: 9201
      name: minio-console-address
      targetPort: 9201
      protocol: TCP
      nodePort: 30201
  selector:
    app: minio
